Changed buttons to inline-block by default and to wrap to fix longer responsive buttons.

--- a/Website/frontend/assets/css/_sass/partials/_forms.scss
+++ b/Website/frontend/assets/css/_sass/partials/_forms.scss
@@ -84,6 +84,7 @@ button,
 a.button {
 	@include border-radius(10px);
 	@include text-shadow(-1px 1px 1px rgba(0,0,0,.3));
+	display: inline-block;
 	height: auto;
 	width: auto;
 	padding: 7px 18px;
@@ -94,7 +95,6 @@ a.button {
 	font-size: 16px;
 	font-weight: 600;
 	text-transform: uppercase;
-	white-space: nowrap;
 	&.secondary {
  		@include text-shadow(-1px 1px 1px rgba(0,0,0,.3));
  		background-color: #797b7e;
